# genai-template

./: .env.example  .gitignore  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
.codex/skills/cloudrun-deploy-ja/: SKILL.md
.codex/skills/cloudrun-deploy-ja/references/: troubleshooting.md  workflow.md
.codex/skills/genai-template-agent-builder-ja/: SKILL.md
.codex/skills/genai-template-agent-builder-ja/references/: coding-conventions.md  repo-structure.md
context/: system_prompt.md
src/agents/: README.md  generate_agents.py  nanobanana_agents.py  revise_agents.py
src/image_models/: __init__.py  fal_ai.py
src/server/: main.py
src/server/routers/: generate_api.py  generate_ui.py  image_api.py  image_ui.py
src/utils/: chunking.py  context_loader.py  data_loader.py  diff_utils.py  image_saver.py  logger.py  storage.py
